--- a/style.css
+++ b/style.css
@@ -100,3 +100,8 @@ body {
      animation-iteration-count: infinite ;
      animation-direction: alternate ;
 }
+
+#player1 .highest, 
+#player2 .highest {
+  color: 'green';
+}
